--- a/tests/events/index.html
+++ b/tests/events/index.html
@@ -3,6 +3,6 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 	</head>
 	<body>
-		<script src="main.go" type="text/go"></script>
+		<script src="events.js" type="text/javascript"></script>
 	</body>
 </html>
